--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="happy"
-        android:text="樂透"
+        android:text="子青老師樂透"
         android:textSize="36sp" />
 
     <TextView
